--- a/todo/templates/add.html
+++ b/todo/templates/add.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <div class="jumbotron">
-        <h1>Sign up</h1>
+        <h1>Add Title</h1>
     </div>
     <div class="container">
         <form action="" method="post">
